# pipelinewise-tap-mssql

./: Pipfile  README.md  config.sample.json  pyproject.toml  setup.py
.github/workflows/: veracode-static-scan.yml
tap_mssql/: __init__.py  connection.py  utils.py
tap_mssql/sync_strategies/: common.py
tests/: test_full_table_interruption.py  test_tap_mysql.py
